<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/appliance_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Appliance Name"
        android:inputType="text"
        android:textColor="@color/primaryTextColor" />

    <EditText
        android:id="@+id/kwh_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kwhHint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/primaryTextColor" />

    <EditText
        android:id="@+id/quantity_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantityHint"
        android:inputType="number"
        android:minHeight="48dp">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelApplicanceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelButtonText" />

        <Button
            android:id="@+id/addApplicanceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saveButtonText" />
    </LinearLayout>


</LinearLayout>