<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="355dp"
        android:src="@drawable/view_pager_image1" />

    <Button
        android:id="@+id/buildButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/build_button"
        app:cornerRadius="40dp" />

    <Button
        android:id="@+id/calculatorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/calc_button"
        app:cornerRadius="40dp" />

    <Button
        android:id="@+id/airbnbButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/book_your_Stay"
        app:cornerRadius="40dp" />
</LinearLayout>