<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/companyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/companyNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dataNameText2"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="180dp"
        android:layout_weight="1"
        android:text="Company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/companyLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="200dp"
        android:text="@string/typeLabel"
        app:layout_constraintEnd_toStartOf="@+id/locationLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyLabel" />

    <TextView
        android:id="@+id/typeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/typeLabel"
        app:layout_constraintTop_toBottomOf="@+id/companyLabel" />

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="65dp"
        android:text="@string/locationLabel"
        app:layout_constraintStart_toEndOf="@+id/typeText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="17dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/locationLabel"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>